--- a/About.html
+++ b/About.html
@@ -1,1 +1,225 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - LaMonje</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #CDF2FA;
+            color: #000000;
+            font-family: 'Anton', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background: transparent;
+        }
+
+        .navbar a {
+            color: #FB8500;
+            text-decoration: none;
+            margin: 0 15px;
+            transition: color 0.3s ease;
+        }
+
+        .navbar a:hover {
+            color: #000;
+        }
+
+        .header {
+            text-align: center;
+            font-size: 50px;
+            margin: 20px 0;
+            font-family: 'Shadows Into Light', cursive;
+        }
+
+        .intro-section, .services-section, .partners-section {
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .intro-section .image-text-group {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        .image-text-group img {
+            width: 200px;
+            height: auto;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .image-text-group img:hover {
+            transform: scale(1.1);
+        }
+
+        .image-text-group p {
+            flex: 1;
+            margin-left: 20px;
+            font-family: 'Shadows Into Light', cursive;
+            font-size: 20px;
+            transition: color 0.3s ease;
+        }
+
+        .image-text-group p:hover {
+            color: #FB8500;
+        }
+
+        .services-section .service-group {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .service-group .service {
+            width: 30%;
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+
+        .service-group .service .main-service {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        .service-group .service .mini-service {
+            font-family: 'Shadows Into Light', cursive;
+            font-size: 18px;
+            margin: 5px 0;
+            display: none;
+        }
+
+        .service-group .service.expanded .mini-service {
+            display: block;
+        }
+
+        .partners-section .partner-logos {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 20px;
+        }
+
+        .partners-section .partner-logos img {
+            width: 100px;
+            height: auto;
+            transition: transform 0.3s ease;
+        }
+
+        .partners-section .partner-logos img:hover {
+            transform: scale(1.1);
+        }
+
+        @media (max-width: 768px) {
+            .image-text-group img, .partner-logos img {
+                margin-bottom: 20px;
+            }
+
+            .image-text-group p, .service-group .service {
+                width: 100%;
+                text-align: center;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar">
+        <a href="home.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="about.html">About</a>
+        <a href="connect.html">Connect</a>
+    </div>
+
+    <div class="header">About Us</div>
+
+    <div class="intro-section">
+        <div class="image-text-group">
+            <img src="about1.png" alt="Image 1">
+            <p>Paragraph 1 about the image and introduction.</p>
+        </div>
+        <div class="image-text-group">
+            <img src="about2.png" alt="Image 2">
+            <p>Paragraph 2 about the image and introduction.</p>
+        </div>
+        <div class="image-text-group">
+            <img src="about3.png" alt="Image 3">
+            <p>Paragraph 3 about the image and introduction.</p>
+        </div>
+        <div class="image-text-group">
+            <img src="about4.png" alt="Image 4">
+            <p>Paragraph 4 about the image and introduction.</p>
+        </div>
+    </div>
+
+    <div class="services-section">
+        <div class="header">Our Services</div>
+        <div class="service-group">
+            <div class="service">
+                <div class="main-service">Main Service 1</div>
+                <div class="mini-service">Mini Service 1.1</div>
+                <div class="mini-service">Mini Service 1.2</div>
+                <div class="mini-service">Mini Service 1.3</div>
+                <div class="mini-service">Mini Service 1.4</div>
+                <div class="mini-service">Mini Service 1.5</div>
+                <div class="mini-service">Mini Service 1.6</div>
+            </div>
+            <div class="service">
+                <div class="main-service">Main Service 2</div>
+                <div class="mini-service">Mini Service 2.1</div>
+                <div class="mini-service">Mini Service 2.2</div>
+                <div class="mini-service">Mini Service 2.3</div>
+                <div class="mini-service">Mini Service 2.4</div>
+                <div class="mini-service">Mini Service 2.5</div>
+                <div class="mini-service">Mini Service 2.6</div>
+            </div>
+            <div class="service">
+                <div class="main-service">Main Service 3</div>
+                <div class="mini-service">Mini Service 3.1</div>
+                <div class="mini-service">Mini Service 3.2</div>
+                <div class="mini-service">Mini Service 3.3</div>
+                <div class="mini-service">Mini Service 3.4</div>
+                <div class="mini-service">Mini Service 3.5</div>
+                <div class="mini-service">Mini Service 3.6</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="partners-section">
+        <div class="header">Partners & Collaboration</div>
+        <div class="partner-logos">
+            <img src="logo1.png" alt="Company 1">
+            <img src="logo2.png" alt="Company 2">
+            <img src="logo3.png" alt="Company 3">
+            <img src="logo4.png" alt="Company 4">
+            <img src="logo5.png" alt="Company 5">
+            <img src="logo6.png" alt="Company 6">
+            <img src="logo7.png" alt="Company 7">
+            <img src="logo8.png" alt="Company 8">
+            <img src="logo9.png" alt="Company 9">
+            <img src="logo10.png" alt="Company 10">
+        </div>
+    </div>
+
+    <script>
+        document.querySelectorAll('.service').forEach(service => {
+            service.addEventListener('click', () => {
+                service.classList.toggle('expanded');
+            });
+        });
+    </script>
+</body>
+</html>
 
