--- a/Project.html
+++ b/Project.html
@@ -111,7 +111,7 @@
             width: 100%;
             height: 100%;
             z-index: 2000;
-            background-color: rgba(222, 226, 230, 0.8); /* Semi-transparent gray background */
+            background-color: #212529;
             padding: 20px;
             overflow-y: auto; /* Enable scrolling */
             pointer-events: auto; /* Enable clicking on pop-up */
@@ -188,7 +188,7 @@
             text-align: center;
             font-size: 24px;
             line-height: 1.6;
-            color: #000000; /* Handwritten font color */
+            color: #ffffff; /* Handwritten font color */
             font-family: 'Shadows Into Light', cursive; /* Handwritten font */
             max-width: 80%;
         }
