--- a/About.html
+++ b/About.html
@@ -52,15 +52,17 @@
         .intro-section .image-text-group {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center; /* Centered images */
+            align-items: center; /* Centered paragraphs */
             margin-bottom: 20px;
         }
 
         .image-text-group img {
-            width: 200px;
+            width: 270px; /* Increased image size */
             height: auto;
             border-radius: 10px;
             transition: transform 0.3s ease;
+            margin-right: 20px; /* Space between image and paragraph */
         }
 
         .image-text-group img:hover {
@@ -69,14 +71,17 @@
 
         .image-text-group p {
             flex: 1;
-            margin-left: 20px;
+            margin: 20px;
             font-family: 'Shadows Into Light', cursive;
             font-size: 20px;
             transition: color 0.3s ease;
+            text-align: center; /* Centered text */
         }
 
-        .image-text-group p:hover {
-            color: #FB8500;
+        .services-section .header {
+            text-align: center;
+            font-size: 36px;
+            margin-bottom: 20px;
         }
 
         .services-section .service-group {
@@ -85,52 +90,68 @@
             flex-wrap: wrap;
         }
 
-        .service-group .service {
+        .service {
             width: 30%;
             margin-bottom: 20px;
             cursor: pointer;
+            position: relative; /* Added for positioning arrow */
+            text-align: center; /* Centered text */
         }
 
-        .service-group .service .main-service {
+        .service .main-service {
             font-size: 24px;
             margin-bottom: 10px;
         }
 
-        .service-group .service .mini-service {
-            font-family: 'Shadows Into Light', cursive;
-            font-size: 18px;
-            margin: 5px 0;
-            display: none;
+        .service .arrow-down {
+            position: absolute;
+            bottom: -20px; /* Adjust arrow position */
+            left: 50%;
+            transform: translateX(-50%);
+            width: 30px;
+            height: 30px;
+            background-color: #FB8500;
+            clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
 
-        .service-group .service.expanded .mini-service {
-            display: block;
+        .partners-section .header {
+            text-align: center;
+            font-size: 36px;
+            margin-bottom: 20px;
         }
 
-        .partners-section .partner-logos {
+        .partner-logos {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            grid-template-columns: repeat(5, 1fr);
             gap: 20px;
+            justify-items: center;
         }
 
-        .partners-section .partner-logos img {
-            width: 100px;
+        .partner-logos img {
+            width: 120px; /* Adjusted logo size */
             height: auto;
             transition: transform 0.3s ease;
         }
 
-        .partners-section .partner-logos img:hover {
+        .partner-logos img:hover {
             transform: scale(1.1);
         }
 
         @media (max-width: 768px) {
-            .image-text-group img, .partner-logos img {
-                margin-bottom: 20px;
+            .image-text-group img {
+                margin-right: 0; /* Remove margin on smaller screens */
             }
 
-            .image-text-group p, .service-group .service {
-                width: 100%;
-                text-align: center;
+            .image-text-group p {
+                margin: 20px 0; /* Adjust margin for better spacing */
+            }
+
+            .service {
+                width: 100%; /* Full width on smaller screens */
+            }
+
+            .partner-logos {
+                grid-template-columns: repeat(2, 1fr); /* Two columns for mobile view */
             }
         }
     </style>
@@ -169,30 +190,19 @@
         <div class="service-group">
             <div class="service">
                 <div class="main-service">Main Service 1</div>
-                <div class="mini-service">Mini Service 1.1</div>
-                <div class="mini-service">Mini Service 1.2</div>
-                <div class="mini-service">Mini Service 1.3</div>
-                <div class="mini-service">Mini Service 1.4</div>
-                <div class="mini-service">Mini Service 1.5</div>
-                <div class="mini-service">Mini Service 1.6</div>
+                <div class="arrow-down"></div> <!-- Down arrow indicator -->
             </div>
             <div class="service">
                 <div class="main-service">Main Service 2</div>
-                <div class="mini-service">Mini Service 2.1</div>
-                <div class="mini-service">Mini Service 2.2</div>
-                <div class="mini-service">Mini Service 2.3</div>
-                <div class="mini-service">Mini Service 2.4</div>
-                <div class="mini-service">Mini Service 2.5</div>
-                <div class="mini-service">Mini Service 2.6</div>
+                <div class="arrow-down"></div> <!-- Down arrow indicator -->
             </div>
             <div class="service">
                 <div class="main-service">Main Service 3</div>
-                <div class="mini-service">Mini Service 3.1</div>
-                <div class="mini-service">Mini Service 3.2</div>
-                <div class="mini-service">Mini Service 3.3</div>
-                <div class="mini-service">Mini Service 3.4</div>
-                <div class="mini-service">Mini Service 3.5</div>
-                <div class="mini-service">Mini Service 3.6</div>
+                <div class="arrow-down"></div> <!-- Down arrow indicator -->
+            </div>
+            <div class="service">
+                <div class="main-service">Main Service 4</div>
+                <div class="arrow-down"></div> <!-- Down arrow indicator -->
             </div>
         </div>
     </div>
@@ -212,14 +222,5 @@
             <img src="logo10.png" alt="Company 10">
         </div>
     </div>
-
-    <script>
-        document.querySelectorAll('.service').forEach(service => {
-            service.addEventListener('click', () => {
-                service.classList.toggle('expanded');
-            });
-        });
-    </script>
 </body>
 </html>
-
