--- a/About.html
+++ b/About.html
@@ -289,16 +289,16 @@
     <div class="partners-section hidden" id="partners">
         <h1>Partners And Collab</h1>
         <div class="partners-list">
-            <img src="path/to/partner_image1.jpg" alt="Partner Image 1">
-            <img src="path/to/partner_image2.jpg" alt="Partner Image 2">
-            <img src="path/to/partner_image3.jpg" alt="Partner Image 3">
-            <img src="path/to/partner_image4.jpg" alt="Partner Image 4">
-            <img src="path/to/partner_image5.jpg" alt="Partner Image 5">
-            <img src="path/to/partner_image6.jpg" alt="Partner Image 6">
-            <img src="path/to/partner_image7.jpg" alt="Partner Image 7">
-            <img src="path/to/partner_image8.jpg" alt="Partner Image 8">
-            <img src="path/to/partner_image9.jpg" alt="Partner Image 9">
-            <img src="path/to/partner_image10.jpg" alt="Partner Image 10">
+            <img src="yewenzelij.png" alt="Partner Image 1">
+            <img src="rotaract.png" alt="Partner Image 2">
+            <img src="icehawassa.png" alt="Partner Image 3">
+            <img src="HAfw.png" alt="Partner Image 4">
+            <img src="gulitsacco.png" alt="Partner Image 5">
+            <img src="gulitmart.png" alt="Partner Image 6">
+            <img src="goldenvalley.png" alt="Partner Image 7">
+            <img src="eyakis.png" alt="Partner Image 8">
+            <img src="asian.png" alt="Partner Image 9">
+            <img src="actionlogo.png" alt="Partner Image 10">
         </div>
     </div>
 
