--- a/Project.html
+++ b/Project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - LaMonje</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@chakra-ui/core/dist/chakra.min.css">
     <style>
         body {
@@ -74,14 +75,16 @@
         }
 
         .company-images {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
             gap: 20px;
             margin: 20px auto; /* Center-align images and add margin */
         }
 
         .company-images img {
-            width: 100%;
+            width: 200px;
             height: auto;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -152,7 +155,12 @@
         <div class="company-images">
             <img src="company1_image1.jpg" alt="Project Image">
             <img src="company1_image2.jpg" alt="Project Image">
-            <!-- Repeat for 8 images -->
+            <img src="company1_image3.jpg" alt="Project Image">
+            <img src="company1_image4.jpg" alt="Project Image">
+            <img src="company1_image5.jpg" alt="Project Image">
+            <img src="company1_image6.jpg" alt="Project Image">
+            <img src="company1_image7.jpg" alt="Project Image">
+            <img src="company1_image8.jpg" alt="Project Image">
         </div>
         <div class="project-description">
             Description of the project for Company Name goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
@@ -161,85 +169,24 @@
 
     <!-- Repeat the company section for each company -->
     <!-- You can copy and paste the above company section to add more companies -->
-
-     <div class="company-section">
+    <div class="company-section">
         <div class="company-name">Company Name</div>
         <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <!-- Repeat for 8 images -->
+            <img src="company2_image1.jpg" alt="Project Image">
+            <img src="company2_image2.jpg" alt="Project Image">
+            <img src="company2_image3.jpg" alt="Project Image">
+            <img src="company2_image4.jpg" alt="Project Image">
+            <img src="company2_image5.jpg" alt="Project Image">
+            <img src="company2_image6.jpg" alt="Project Image">
+            <img src="company2_image7.jpg" alt="Project Image">
+            <img src="company2_image8.jpg" alt="Project Image">
         </div>
         <div class="project-description">
             Description of the project for Company Name goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
         </div>
     </div>
 
-     <div class="company-section">
-        <div class="company-name">Company Name</div>
-        <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <!-- Repeat for 8 images -->
-        </div>
-        <div class="project-description">
-            Description of the project for Company Name goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
-        </div>
-    </div>
-
-     <div class="company-section">
-        <div class="company-name">Company Name</div>
-        <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <!-- Repeat for 8 images -->
-        </div>
-        <div class="project-description">
-            Description of the project for Company Name goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
-        </div>
-    </div>
-
-     <div class="company-section">
-        <div class="company-name">Company Name</div>
-        <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <!-- Repeat for 8 images -->
-        </div>
-        <div class="project-description">
-            Description of the project for Company Name goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
-        </div>
-    </div>
-
-     <div class="company-section">
-        <div class="company-name">Company Name</div>
-        <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <!-- Repeat for 8 images -->
-        </div>
-        <div class="project-description">
-            Description of the project for Company Name goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
-        </div>
-
-    </div>
-     <div class="company-section">
-        <div class="company-name">Company Name</div>
-        <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-            <img src="company1_image2.jpg" alt="Project Image">
-
-            <!-- Repeat for 8 images -->
-        </div>
-        <div class="project-description">
-            Description of the project for Company Name goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
-        </div>
-    </div>
+    <!-- Repeat the above company section for each company -->
 
     <script>
         window.addEventListener('load', () => {
